fix: remove accordion shadows in favor of paper/card wrapping

--- a/source/sass/component/_accordion.scss
+++ b/source/sass/component/_accordion.scss
@@ -1,6 +1,5 @@
 .c-accordion {
     background: white;
-    filter: $drop-shadow-1;
 
     &__button {
         @include button-unstyled;
@@ -26,11 +25,6 @@
         }
 
         &[aria-expanded="true"] {
-
-            .c-accordion__button-wrapper  {
-                background-color: #fbfbfb;
-            }
-
             .c-accordion__icon {
                 transform: rotate(180deg);
                 transition: ease .3s transform;
@@ -85,16 +79,6 @@
 
         *:first-child { 
             margin-top: 0; 
-        }
-
-        &:before {
-            content: ""; 
-            position: absolute;
-            height: $base;
-            top: 0; 
-            right: 0;
-            left: 0; 
-            background: linear-gradient(180deg, rgba(0,0,0,0.05) 0%, rgba(255,255,255,0) 100%);
         }
     }
 
